szkolenie-k8s/PART6-Ingress/LAB1/ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owocowy-ingress
spec:
  ingressClassName: nginx   # <--- TO JEST KLUCZOWA LINIA!
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana
                port:
                  number: 5678
